fix: [pd-1284] spacing issue fix and search suggestion start from one character

--- a/src/component/SearchSuggestion/SearchSuggestion.style.scss
+++ b/src/component/SearchSuggestion/SearchSuggestion.style.scss
@@ -71,8 +71,8 @@
     &_isBrandsMenu {
       @include mobile {
         top: 50px;
-        height: 100vh;
-        max-height: 100vh;
+        height: calc(100vh - 100px);
+        max-height: calc(100vh - 100px);
         background-color: #ffffff;
       }
     }
